--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <p class="birth-date">Your Birth-Date: 5 December</p>
-        <div id="coming-soon-message" class="coming-soon-message">🎉 Your Birthday is Coming Soon! 🎉</div>
+        <div id="coming-soon-message" class="coming-soon-message">🎉 Your Day is Coming Soon! 🎉</div>
         <div id="balloon-container" class="balloon-container"></div>
     </div>
 
