--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="blue-background">
     <div class="container fade-in" id="profileContainer">
         <div class="profile-img-container">
-            <img src="../prt/img/profile.jpg" alt="Profile Picture" class="profile-img">
+            <img src="img/profile.jpg" alt="Profile Picture" class="profile-img">
         </div>
         <h1 class="name">Isha Magrati</h1>
         <p class="title">Making my mark in the medical world</p>
